# SUMMER-STEM-READY

./: README.md
Release/: unlock.html
ScreenLockerPoC/: CMakeLists.txt  app.manifest  resource.rc
ScreenLockerPoC/include/: Constants.h  ScreenLocker.h  StringUtils.h  utils.h
ScreenLockerPoC/pocWebsite/: poc_website.html
ScreenLockerPoC/remover/: CMakeLists.txt
ScreenLockerPoC/remover/include/: remover.h
ScreenLockerPoC/remover/src/: main.cpp  remover.cpp
ScreenLockerPoC/remover_lib/: CMakeLists.txt
ScreenLockerPoC/remover_lib/include/: remover.h
ScreenLockerPoC/remover_lib/src/: remover.cpp
ScreenLockerPoC/server/: app.py  requirements.txt  users.json
ScreenLockerPoC/server/pocWebsite/: poc_website.html
ScreenLockerPoC/src/: ScreenLocker.cpp  main.cpp  utils.cpp
ScreenLockerPoC/usb_remover/: CMakeLists.txt
ScreenLockerPoC/usb_remover/src/: main.cpp  remover.cpp
